include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(BlockListManager)
add_subdirectory(ColorManip)
add_subdirectory(ExternalConverters)
add_subdirectory(Schem)
add_subdirectory(NBTWriter)
add_subdirectory(uiPack)
add_subdirectory(MapImageCvter)
add_subdirectory(libAbstractGUI)
add_subdirectory(libSCGUI)